# poker-hand-indexer

./: Cargo.toml  README.md  build.rs
src/: indexer.rs  lib.rs  main.rs
src/indexer/: rust_bindings.rs
src_c/: deck.h  hand_index.c  hand_index.h  rust.h  rust_interface.c
