[package]
name = "hand_indexer"
version = "0.1.0"
authors = ["Allen Boyd Cunningham <cleverpiggy1@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.6.1"

[build-dependencies]
cc = {version = "^1.0.66", features =  ["parallel"]}
