[package]
name = "hand_indexer"
version = "0.1.0"
authors = ["Allen Boyd Cunningham <cleverpiggy1@mac.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smallvec", "bitintr"]

[dependencies]
smallvec = { version = "^1.6.1", optional = true}
bitintr = {version = "^0.3.0", optional = true}

[build-dependencies]
cc = {version = "^1.0.66", features =  ["parallel"]}
